Add fasttext language detection

--- a/language-tool.properties
+++ b/language-tool.properties
@@ -1,3 +1,5 @@
 cacheSize=1000
 pipelineCaching=true
 maxPipelinePoolSize=100
+fasttextModel=/opt/fasttext/lid.176.bin
+fasttextBinary=/usr/local/bin/fasttext
